--- a/index.html
+++ b/index.html
@@ -1,83 +1,135 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <title>Train Schedule</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Sigmar+One|Special+Elite" rel="stylesheet">
-    <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase.js"></script>
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-    <script src="assets/javascript/app.js" type="text/javascript"></script>
-    <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
-    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
+    <title>Train Scheduler</title>
 
-<body>
-    <div class="container">
-        <div class="jumbotron text-center bg-success text-white">
-            <h1>Train Times</h1>
-        </div>
+    <meta name="viewport" content="width=device-width" initial-scale=1.0 ">
 
-        <div class="panel panel-success text-success">
-            <div class="panel-heading">
-                <h3>Current Train Schedule</h3>
+        <link rel=" stylesheet " type=" text/css " href=" assets/css/reset.css ">
+
+        <link rel=" stylesheet " type=" text/css " href=" assets/css/style.css ">
+    
+        <link href=" https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css " rel=" stylesheet "
+            integrity=" sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb " crossorigin=" anonymous ">
+   
+        <link href=" https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css " rel=" stylesheet "
+            integrity=" sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN " crossorigin=" anonymous ">
+    </head>
+
+    <body>
+        <div class=" wrapper ">
+
+            <div class=" jumbotron jumbotron-fluid header ">
+                <div class=" container ">
+                    <h1 class=" display-3 ">
+                        <i class=" fa fa-train " aria-hidden=" true "></i>
+                    <h1 class=" display-3 "><strong>Train Scheduler</strong></h1>
+                    <h2 class=" currentTime "></h2>
+                </div>
             </div>
-            <div class="panel-body">
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th>Train Name</th>
-                            <th>Destination</th>
-                            <th>Frequency(min)</th>
-                            <th>Next Arrival</th>
-                            <th>Minutes Away</th>
-                        </tr>
-                    </thead>
+            <!-- Main Content Area -->
+            <div class=" container ">
+                <div class=" card text-white bg-dark mb-3 ">
+                    <div class=" card-header schedule-header ">
+                        Train Schedule
+                    </div>
+                    <div class=" card-body ">
+                        <table class=" table table-striped table-dark table-responsive-sm table-responsive-md train-schedule-table ">
+                            <thead class=" train-schedule-head ">
+                                <tr>
+                                    <th scope=" col ">Train #</th>
+                                    <th scope=" col ">Line</th>
+                                    <th scope=" col ">Destination</th>
+                                    <th scope=" col ">Next Arrival</th>
+                                    <th scope=" col ">Time to Arrival</th>
+                                    <th scope=" col ">Frequency</th>
+                                    <th scope=" col ">Platform #</th>
+                                </tr>
+                            </thead>
+                            <tbody id=" train-schedule-body "></tbody>
+                        </table>
 
+                    </div>
+                </div>
 
-                    <tbody id="add-row">
-                    </tbody>
+                <div class=" card text-white bg-dark mb-3 ">
+                    <div class=" card-header form-header ">
+                        Add Train to Schedule
+                    </div>
+                    <div class=" card-body ">
+                        <form novalidate>
+                            <div class=" form-row ">
+                                <div class=" form-group col-sm-6 ">
+                                    <label for=" train-number ">Train #</label>
+                                    <input type=" number " class=" form-control " id=" train-number " min=" 1 " max=" 999 "
+                                        placeholder=" 123 " required />
+                                    <div class=" invalid-feedback ">
+                                        Please provide a Train #.
+                                    </div>
+                                </div>
+                                <div class=" form-group col-sm-6 ">
+                                    <label for=" train-line ">Line</label>
+                                    <input type=" text " class=" form-control " id=" train-line " maxlength=20 placeholder=" Express "
+                                        required />
+                                    <div class=" invalid-feedback ">
+                                        Please provide a Train Line.
+                                    </div>
+                                </div>
+                            </div>
+                            <div class=" form-group ">
+                                <label for=" train-destination ">Destination</label>
+                                <input type=" text " class=" form-control " id=" train-destination " maxlength=12 placeholder=" City or Station Name "
+                                    required />
+                                <div class=" invalid-feedback ">
+                                    Please provide a Destination.
+                                </div>
+                            </div>
+                            <div class=" form-row ">
+                                <div class=" form-group col-sm-4 ">
+                                    <label for=" train-departure ">First Departure (24hr format)</label>
+                                    <input type=" number " class=" form-control " id=" train-departure " placeholder=" 0800 "
+                                        required />
+                                    <div class=" invalid-feedback ">
+                                        Please provide a Train's First Departure Time.
+                                    </div>
+                                </div>
+                                <div class=" form-group col-sm-4 ">
+                                    <label for=" train-frequency ">Frequency (minutes)</label>
+                                    <input type=" number " class=" form-control " id=" train-frequency " min=" 10 " max=" 720 "
+                                        placeholder=" 30 " required />
+                                    <div class=" invalid-feedback ">
+                                        Please provide a Train Frequency.
+                                    </div>
+                                </div>
+                                <div class=" form-group col-sm-4 ">
+                                    <label for=" train-platform ">Platform</label>
+                                    <input type=" text " class=" form-control " id=" train-platform " maxlength=2 placeholder=" 2a "
+                                        required />
+                                    <div class=" invalid-feedback ">
+                                        Please provide a Platform.
+                                    </div>
+                                </div>
+                            </div>
+                            <button type=" submit " class=" btn button-add ">Add Train</button>
+                        </form>
 
-                </table>
-            </div>
-        </div>
-
-
-        <div class="panel panel-success text-success">
-            <div class="panel-heading">
-                <h3>Add Train</h3>
-            </div>
-
-            <div class="panel-body">
-                <form>
-                    <div class="form-group">
-                        <label for="text">Train Name</label>
-                        <input type="text" class="form-control" id="train-name">
                     </div>
 
-                    <div class="form-group">
-                        <label for="text">Destination</label>
-                        <input type="text" class="form-control" id="destination">
-                    </div>
-
-                    <div class="form-group">
-                        <label for="text">First Train Time (HH:mm - Military Time)</label>
-                        <input type="text" class="form-control" id="first-train">
-                    </div>
-
-                    <div class="form-group">
-                        <label for="text">Frequency(min)</label>
-                        <input type="text" class="form-control" id="frequency">
-                    </div>
-
-                    <button type="submit" id="add-train" class="btn btn-success" id="addTrain">Submit</button>
-                </form>
+                </div>
             </div>
-        </div>
-    </div>
-</body>
+
+            <script src=" https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.19.1/moment.min.js "></script>
+            <script src=" https://www.gstatic.com/firebasejs/4.6.2/firebase.js "></script>
+            <script src=" https://code.jquery.com/jquery-3.2.1.min.js " integrity=" sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+                crossorigin=" anonymous "></script>
+            <script src=" https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js " integrity=" sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh "
+                crossorigin=" anonymous "></script>
+            <script src=" https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js " integrity=" sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ "
+                crossorigin=" anonymous "></script>
+            <script type=" text/javascript " src=" assets/javascript/model.js "></script>
+            <script type=" text/javascript " src=" assets/javascript/view.js "></script>
+            <script type=" text/javascript " src=" assets/javascript/controller.js "></script>
+    </body>
 
 </html>
