Firebase-Assignment---Train-Scheduler

--- a/index.html
+++ b/index.html
@@ -8,21 +8,26 @@
     <meta name="viewport" content="width=device-width" initial-scale="1.0">
     <link rel="stylesheet" type="text/css" href=" assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href=" assets/css/style.css">
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css " rel="stylesheet" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css " rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
 
 <body>
-    <script type=" text/javascript " src="assets/javascript/model.js "></script>
-    <script type=" text/javascript " src="assets/javascript/view.js "></script>
-    <script type=" text/javascript " src="assets/javascript/controller.js "></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.19.1/moment.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.7.3/firebase.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin=" anonymous "></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh " crossorigin=" anonymous "></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ " crossorigin=" anonymous "></script>
+    <script type="text/javascript" src="assets/javascript/model.js"></script>
+    <script type="text/javascript" src="assets/javascript/view.js"></script>
+    <script type="text/javascript" src="assets/javascript/controller.js"></script>
     <div class="wrapper">
 
         <div class="jumbotron jumbotron-fluid header">
             <div class="container">
                 <h1 class=" display-3 ">
                     <i class="fa fa-train" aria-hidden="true"></i>
-                    <h1 class="display-3 "><strong>Train Scheduler</strong></h1>
+                    <h1 class="display-3 "><strong>Domestic Train Schedule</strong></h1>
                     <h2 class="currentTime"></h2>
             </div>
         </div>
@@ -109,11 +114,7 @@
             </div>
         </div>
 
-        <script src=" https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.19.1/moment.min.js "></script>
-        <script src="https://www.gstatic.com/firebasejs/5.7.3/firebase.js "></script>
-        <script src=" https://code.jquery.com/jquery-3.2.1.min.js " integrity=" sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin=" anonymous "></script>
-        <script src=" https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js " integrity=" sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh " crossorigin=" anonymous "></script>
-        <script src=" https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js " integrity=" sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ " crossorigin=" anonymous "></script>
+
 </body>
 
 </html>
